--- a/src/cloudscribe.Syndication/project.json
+++ b/src/cloudscribe.Syndication/project.json
@@ -3,8 +3,8 @@
     "description": "cloudscribe.Syndication Class Library",
     "authors": [ "Joe Audette" ],
     "owners": [ "Source Tree Solutions" ],
-    "tags": [ "cloudscribe", "syndication", "rss", "atom", "feed","xml" ],
-    "projectUrl": "https://github.com/joeaudette/cloudscribe.SimpleContent",
+    "tags": [ "cloudscribe", "syndication", "rss", "atom", "feed", "xml" ],
+    "projectUrl": "https://github.com/joeaudette/cloudscribe.Syndication",
     "licenseUrl": "http://www.apache.org/licenses/LICENSE-2.0",
     "copyright": "2015 Source Tree Solutions",
     "iconUrl": "https://raw.githubusercontent.com/joeaudette/cloudscribe/master/cloudscribe-icon-32.png",
