--- a/src/cloudscribe.Syndication/project.json
+++ b/src/cloudscribe.Syndication/project.json
@@ -1,40 +1,27 @@
-{
-    "version": "1.0.0-beta1",
+﻿{
+    "version": "1.0.0-beta2",
     "description": "cloudscribe.Syndication Class Library",
     "authors": [ "Joe Audette" ],
-    "owners": [ "Source Tree Solutions" ],
-    "tags": [ "cloudscribe", "syndication", "rss", "atom", "feed", "xml" ],
-    "projectUrl": "https://github.com/joeaudette/cloudscribe.Syndication",
-    "licenseUrl": "http://www.apache.org/licenses/LICENSE-2.0",
-    "copyright": "2015 Source Tree Solutions",
-    "iconUrl": "https://raw.githubusercontent.com/joeaudette/cloudscribe/master/cloudscribe-icon-32.png",
-    "requireLicenseAcceptance": false,
-    "releaseNotes": "",
+    "packOptions": {
+        "owners": [ "Source Tree Solutions" ],
+        "tags": [ "cloudscribe", "syndication", "rss", "atom", "feed", "xml" ],
+        "projectUrl": "https://github.com/joeaudette/cloudscribe.Syndication",
+        "licenseUrl": "http://www.apache.org/licenses/LICENSE-2.0",
+        "copyright": "2015 Source Tree Solutions",
+        "iconUrl": "https://raw.githubusercontent.com/joeaudette/cloudscribe/master/cloudscribe-icon-32.png",
+        "requireLicenseAcceptance": false,
+        "releaseNotes": ""
+    },
 
+
+    "dependencies": {
+        "Microsoft.AspNetCore.Mvc.Core": "1.0.0-rc2-final",
+        "NETStandard.Library": "1.5.0-rc2-24027"
+    },
 
     "frameworks": {
-        "net451": {
-            "frameworkAssemblies": {
-                "System.Xml": "4.0.0.0",
-                "System.Xml.Linq": "4.0.0.0"
-            }
-        },
-        "dnxcore50": {
-            "dependencies": {
-                "Microsoft.CSharp": "4.0.1-beta-23516",
-                "System.Collections": "4.0.11-beta-23516",
-                "System.IO": "4.0.11-beta-23516",
-                "System.Linq": "4.0.1-beta-23516",
-                "System.Runtime": "4.0.21-beta-23516",
-                "System.Threading": "4.0.11-beta-23516",
-                "System.Xml.XmlDocument": "4.0.1-beta-23516",
-                "System.Xml.XDocument": "4.0.11-beta-23516",
-                "System.Xml.XPath": "4.0.1-beta-23516",
-                "System.Xml.ReaderWriter": "4.0.11-beta-23516"
-            }
+        "netstandard1.5": {
+            "imports": "dnxcore50"
         }
-    },
-    "dependencies": {
-        "Microsoft.AspNet.Mvc.Core": "6.0.0-rc1-final"
     }
 }
