--- a/src/cloudscribe.Syndication.Web/project.json
+++ b/src/cloudscribe.Syndication.Web/project.json
@@ -1,5 +1,5 @@
 ﻿{
-    "version": "1.0.0-beta3",
+    "version": "1.0.0",
     "description": "asp.netcore mvc controller for rss feeds",
     "authors": [ "Joe Audette" ],
     "packOptions": {
@@ -15,13 +15,16 @@
 
 
     "dependencies": {
-        "NETStandard.Library": "1.5.0-rc2-24027",
-        "Microsoft.AspNetCore.Mvc.ViewFeatures": "1.0.0-rc2-final",
+        "NETStandard.Library": "1.6.0-*",
+        "Microsoft.AspNetCore.Mvc.ViewFeatures": "1.0.0-*",
         "cloudscribe.Syndication": "1.0.0-*"
     },
 
     "frameworks": {
-        "netstandard1.3": {
+        "net46": { },
+        "net452": { },
+        "net451": { },
+        "netstandard1.6": {
             "imports": "dnxcore50"
         }
     }
