--- a/src/cloudscribe.Syndication/project.json
+++ b/src/cloudscribe.Syndication/project.json
@@ -1,5 +1,5 @@
 ﻿{
-    "version": "1.0.0-beta2",
+    "version": "1.0.0",
     "description": "cloudscribe.Syndication Class Library",
     "authors": [ "Joe Audette" ],
     "packOptions": {
@@ -15,12 +15,30 @@
 
 
     "dependencies": {
-        "Microsoft.AspNetCore.Mvc.Core": "1.0.0-rc2-final",
-        "NETStandard.Library": "1.5.0-rc2-24027"
+        "Microsoft.AspNetCore.Mvc.Core": "1.0.0-*",
+        "NETStandard.Library": "1.6.0-*"
     },
 
     "frameworks": {
-        "netstandard1.3": {
+        "net46": {
+            "frameworkAssemblies": {
+                "System.Xml": "4.0.0.0",
+                "System.Xml.Linq": "4.0.0.0"
+            }
+        },
+        "net452": {
+            "frameworkAssemblies": {
+                "System.Xml": "4.0.0.0",
+                "System.Xml.Linq": "4.0.0.0"
+            }
+        },
+        "net451": {
+            "frameworkAssemblies": {
+                "System.Xml": "4.0.0.0",
+                "System.Xml.Linq": "4.0.0.0"
+            }
+        },
+        "netstandard1.6": {
             "imports": "dnxcore50"
         }
     }
