--- a/src/cloudscribe.Syndication.Web/project.json
+++ b/src/cloudscribe.Syndication.Web/project.json
@@ -1,5 +1,5 @@
 ﻿{
-    "version": "1.0.0",
+    "version": "1.0.1",
     "description": "asp.netcore mvc controller for rss feeds",
     "authors": [ "Joe Audette" ],
     "packOptions": {
@@ -16,6 +16,7 @@
 
     "dependencies": {
         "NETStandard.Library": "1.6.0-*",
+        "Microsoft.AspNetCore.Mvc": "1.0.0-*",
         "Microsoft.AspNetCore.Mvc.ViewFeatures": "1.0.0-*",
         "cloudscribe.Syndication": "1.0.0-*"
     },
