--- a/src/cloudscribe.Syndication/project.json
+++ b/src/cloudscribe.Syndication/project.json
@@ -1,5 +1,5 @@
 ﻿{
-    "version": "1.0.5",
+    "version": "1.0.6",
     "description": "cloudscribe.Syndication Class Library",
     "authors": [ "Joe Audette" ],
     "packOptions": {
@@ -15,7 +15,7 @@
 
 
     "dependencies": {
-        "Microsoft.AspNetCore.Mvc.Core": "1.0.0-*",
+        "Microsoft.AspNetCore.Mvc.Core": "1.0.*",
         "NETStandard.Library": "1.6.0-*"
     },
 
