--- a/src/cloudscribe.Syndication.Web/project.json
+++ b/src/cloudscribe.Syndication.Web/project.json
@@ -1,5 +1,5 @@
 ﻿{
-    "version": "1.0.6",
+    "version": "1.1.0",
     "description": "asp.netcore mvc controller for rss feeds",
     "authors": [ "Joe Audette" ],
     "packOptions": {
@@ -15,10 +15,10 @@
 
 
     "dependencies": {
-        "NETStandard.Library": "1.6.0-*",
-        "Microsoft.AspNetCore.Mvc": "1.0.*",
-        "Microsoft.AspNetCore.Mvc.ViewFeatures": "1.0.*",
-        "cloudscribe.Syndication": "1.0.*"
+        "NETStandard.Library": "1.6.1",
+        "Microsoft.AspNetCore.Mvc": "1.1.*",
+        "Microsoft.AspNetCore.Mvc.ViewFeatures": "1.1.*",
+        "cloudscribe.Syndication": "1.1.*"
     },
 
     "frameworks": {
