--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,12 @@
-language: csharp
-solution: cloudscribe.Syndication.sln
-sudo: false
 dist: trusty
+language: csharp
+install: true
 mono: none
-dotnet: 1.0.4
-env:
-  global:
-    - DOTNET_SKIP_FIRST_TIME_EXPERIENCE: true
-    - DOTNET_CLI_TELEMETRY_OPTOUT: 1   
-os:
-  - linux
-  - osx
-osx_image: xcode8.3
+dotnet: 2.0.0
+sudo: required
+branches:
+  only:
+    - master
 script:
-  - if test "$TRAVIS_OS_NAME" == "linux"; then dotnet restore; fi
-  - if test "$TRAVIS_OS_NAME" == "osx"; then dotnet restore --disable-parallel; fi
-  - dotnet build -c Release
+  - ./build.sh
+
