--- a/src/cloudscribe.Syndication.Web/cloudscribe.Syndication.Web.csproj
+++ b/src/cloudscribe.Syndication.Web/cloudscribe.Syndication.Web.csproj
@@ -2,18 +2,14 @@
 
   <PropertyGroup>
     <Description>asp.netcore mvc controller for rss feeds</Description>
-    <VersionPrefix>1.1.1</VersionPrefix>
+    <VersionPrefix>2.1.0</VersionPrefix>
     <Authors>Joe Audette</Authors>
-    <TargetFrameworks>netstandard1.6</TargetFrameworks>
-    <AssemblyName>cloudscribe.Syndication.Web</AssemblyName>
-    <PackageId>cloudscribe.Syndication.Web</PackageId>
+    <TargetFrameworks>netstandard2.0</TargetFrameworks>
     <PackageTags>cloudscribe;syndication;rss;atom;feed</PackageTags>
     <PackageIconUrl>https://raw.githubusercontent.com/joeaudette/cloudscribe/master/cloudscribe-icon-32.png</PackageIconUrl>
     <PackageProjectUrl>https://github.com/joeaudette/cloudscribe.Syndication</PackageProjectUrl>
     <PackageLicenseUrl>http://www.apache.org/licenses/LICENSE-2.0</PackageLicenseUrl>
-    <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
-    <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
-    <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
+    
   </PropertyGroup>
 
   <ItemGroup>
@@ -21,8 +17,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="1.1.*" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.ViewFeatures" Version="1.1.*" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.1.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.ViewFeatures" Version="2.1.0" />
   </ItemGroup>
 
+  
 </Project>
