--- a/src/cloudscribe.Syndication/cloudscribe.Syndication.csproj
+++ b/src/cloudscribe.Syndication/cloudscribe.Syndication.csproj
@@ -2,24 +2,20 @@
 
   <PropertyGroup>
     <Description>cloudscribe.Syndication Class Library</Description>
-    <VersionPrefix>1.1.1</VersionPrefix>
+    <VersionPrefix>2.1.0</VersionPrefix>
     <Authors>Joe Audette</Authors>
-    <TargetFrameworks>netstandard1.6</TargetFrameworks>
-    <AssemblyName>cloudscribe.Syndication</AssemblyName>
-    <PackageId>cloudscribe.Syndication</PackageId>
+    <TargetFrameworks>netstandard2.0</TargetFrameworks>
     <PackageTags>cloudscribe;syndication;rss;atom;feed;xml</PackageTags>
     <PackageIconUrl>https://raw.githubusercontent.com/joeaudette/cloudscribe/master/cloudscribe-icon-32.png</PackageIconUrl>
     <PackageProjectUrl>https://github.com/joeaudette/cloudscribe.Syndication</PackageProjectUrl>
     <PackageLicenseUrl>http://www.apache.org/licenses/LICENSE-2.0</PackageLicenseUrl>
-    <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
-    <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
-    <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
+    
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="1.1.*" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.1.0" />
   </ItemGroup>
 
- 
+  
 
 </Project>
