--- a/src/cloudscribe.Syndication.Web/cloudscribe.Syndication.Web.csproj
+++ b/src/cloudscribe.Syndication.Web/cloudscribe.Syndication.Web.csproj
@@ -8,7 +8,7 @@
     <PackageTags>cloudscribe;syndication;rss;atom;feed</PackageTags>
     <PackageIconUrl>https://raw.githubusercontent.com/joeaudette/cloudscribe/master/cloudscribe-icon-32.png</PackageIconUrl>
     <PackageProjectUrl>https://github.com/joeaudette/cloudscribe.Syndication</PackageProjectUrl>
-    <PackageLicenseUrl>http://www.apache.org/licenses/LICENSE-2.0</PackageLicenseUrl>
+    <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
     <RepositoryUrl>https://github.com/cloudscribe/cloudscribe.Syndication.git</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     
